changes:-fixed layout issues for work pictures -added divs around pictures and made their position relative and the text below absolute to put titles for project on each picture -added box-shadow and transform effect when pictures are hovered over

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -30,12 +30,12 @@ header {
 
 h1 {
     font-size: 300%;
-    color: var(--teal);
-    background: var(--off-white);
-    padding: 15px;
+    color: var(--off-white);
+    background: var(--teal);
+    padding: 22px;
     padding-left: 65px;
     align-self: flex-end;
-    margin-bottom: 2%;;
+    margin-bottom: 3%;;
 }
 
 nav{
@@ -67,18 +67,18 @@ nav ul li a {
 nav ul li a:hover {
     font-size: 30px;
     font-weight: 10000;
-    text-shadow: 5px 2px 3px var(--teal);
+    /* text-shadow: 10px 5px 4px var(--midnight-blue); */
+    
 }
 
 section {
-    padding: 2%;
+    padding: 4%;
 }
 
 
-.about-me {
+#about-me {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
 
 }
 
@@ -94,62 +94,68 @@ h2{
     color: var(--midnight-blue);
     padding: 3%;
     border-right: 5px solid var(--midnight-blue);
-    margin: 3%;
+    /* margin: 3%; */
     text-align: right;
     
 }
 
-.paragraph{
+.paragraph, .project-pictures{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 3%;
+    
 }
 
-p {
+.paragraph p {
     padding: 1%;
     color: var(--off-white);
-    font-size: 125%;
+    font-size: 100%;
     font-weight: 200;
-    margin-top: 2.5%;
-    
-    /* display: inline;
-    position: relative;
-    float: left; */
-    /* width: 75%; */
 }
 
-
-
-.work {
+#work {
     display: inline-flex;
     justify-content: space-between;
     
-    /* align-items: flex-start; */
-    
-}
-
-.work h2, .about-me h2 {
-    padding-bottom: 60%;
 }
 
 img {
     border: solid 10px #008891;
     margin: 1%;
+    opacity: 0.9;
 }
 
-.project-pictures {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.project-pictures img:hover {
+    box-shadow: 0px 0px 50px 0px var(--midnight-blue);
+    transform: scale(1.03);
+    opacity: 1;
+}
+
+#big-picture-container {
+    position: relative;
+}
+
+.text-container1 {
+    position: absolute;
+    top: 60%;
+    left: 1%;
+    background: var(--teal);
+    padding: 1%;
+    padding-left: 10%;
+    color: var(--midnight-blue);
+    text-align: right;
+}
+
+h3 {
+    font-size: 100%;
 }
 
 #big-picture {
     margin: 1%;
-    margin-top: 5%;
-    height: 35%;
-    width: 100%;
+    height: 85%;
+    width: 98%;
 }
 
 .other-pictures-container {
@@ -158,11 +164,46 @@ img {
 }
 
 .other-pictures {
-    height: 40%;
-    width: 48%;
+    height: 100%;
+    width: 47%;
 }
 
-.contact-me {
+.other-pictures-text-container{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 45%;
+}
+
+.text-container2 {
+    position: absolute;
+    top: 15%;
+    left: 1%;
+    background: var(--teal);
+    padding: 1%;
+    padding-left: 8%;
+    color: var(--midnight-blue);
+    text-align: right;
+}
+
+.text-container3 {
+    position: absolute;
+    top: 15%;
+    right: 1%;
+    background: var(--teal);
+    padding: 1%;
+    padding-right: 8%;
+    color: var(--midnight-blue);
+    text-align: left;
+}
+
+.text-container1 p, .text-container2 p, .text-container3 p {
+    color: var(--off-white);
+    font-size: 90%;
+    padding-top: 3%;
+}
+
+#contact-me {
     display: flex;
     justify-content: space-between;
     
@@ -178,11 +219,7 @@ img {
 .contact {
     border-bottom: 4px solid var(--teal);
     padding: 10px;
-    
-
 }
-
-
 
 
 /* Media queries */
@@ -202,8 +239,8 @@ img {
         font-size: 1rem;
     }
 
-    a:hover {
-        font-size: 20px;
+    nav ul li a:hover {
+        font-size: 125%;
 
     }
 
